# oneAPI-samples

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  CHANGELOGS.md  CMakeLists.txt  CODEOWNERS  CODESAMPLESLIST.md  CONTRIBUTING.md  Contributing.md  LICENSE.txt  License.txt  README.md  book_errata.txt  clang-format.sh  contents.html  dpcpp_toolchain.cmake  genindex.html  index.html  objects.inv  release.json  search.html  searchindex.js  third-party-programs.txt
AI-and-Analytics/End-to-end-Workloads/JobRecommendationSystem/: JobRecommendationSystem.ipynb  JobRecommendationSystem.py  README.md  pyproject.toml  requirements.txt  sample.json
AI-and-Analytics/End-to-end-Workloads/LidarObjectDetection-PointPillars/: .clang-format  CMakeLists.txt  README.md  get_dependencies.sh  sample.json
AI-and-Analytics/Features-and-Functionality/INC_QuantizationAwareTraining_TextClassification/: INC_QuantizationAwareTraining_TextClassification.ipynb  INC_QuantizationAwareTraining_TextClassification.py  README.md  pyproject.toml  requirements.txt  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPyTorch_GPU_InferenceOptimization_with_AMP/: IntelPyTorch_GPU_InferenceOptimization_with_AMP.ipynb  IntelPyTorch_GPU_InferenceOptimization_with_AMP.py  README (2).md  README.md  ci_test.py  pyproject.toml  requirements.txt  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPyTorch_TrainingOptimizations_AMX_BF16/: IntelPyTorch_TrainingOptimizations_AMX_BF16.ipynb  IntelPyTorch_TrainingOptimizations_AMX_BF16.py  README.md  ci_test.py  pyproject.toml  pytorch_training_amx_bf16.py  pytorch_training_avx512_bf16.py  requirements.txt  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_GPU_dpnp_Genetic_Algorithm/: IntelPython_GPU_dpnp_Genetic_Algorithm.ipynb  IntelPython_GPU_dpnp_Genetic_Algorithm.py  README.md  pyproject.toml  requirements.txt  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_Numpy_Numba_dpnp_kNN/: IntelPython_Numpy_Numba_dpnp_kNN.ipynb  IntelPython_Numpy_Numba_dpnp_kNN.py  README.md  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_XGBoost_Performance/: IntelPython_XGBoost_Performance.ipynb  IntelPython_XGBoost_Performance.py  README.md  ci_test.py  pyproject.toml  requirements.txt  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_XGBoost_daal4pyPrediction/: IntelPython_XGBoost_daal4pyPrediction.ipynb  README.md  ci_test.py  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_daal4py_DistributedKMeans/: IntelPython_daal4py_Distributed_Kmeans.ipynb  IntelPython_daal4py_Distributed_Kmeans.py  README.md  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_for_LLMs/: README.md  (+8 more)
Publications/DPC++/: CMakeLists.txt  README.md  book_errata.txt  dpcpp_toolchain.cmake
Publications/GPU-Opt-Guide/: CMakeLists.txt  README.md  sample.json
RenderingToolkit/02_embree_gsg/: CMakeLists.txt  README.md  sample.json
RenderingToolkit/oidn_gsg/: CMakeLists.txt  sample.json
Templates/cmake/: CMakeLists.txt  README.md
VisualComputing/hellodxtriangle/: CMakeLists.txt  License.txt  hellodxtriangle.cpp  third-party-programs.txt
samples/: CMakeLists.txt
samples/Ch01_intro/: fig_1_1_hello.cpp  fig_1_3_race.cpp
samples/Ch02_where_code_runs/: CMakeLists.txt  fig_2_10_gpu_selector.cpp  fig_2_12_multiple_selectors.cpp  fig_2_13_gpu_plus_fpga.cpp  fig_2_15_aspect_selector.cpp  fig_2_15_custom_selector.cpp  fig_2_16_custom_selector.cpp  fig_2_23_host_task.cpp  fig_2_7_implicit_default_selector.cpp  fig_2_9_cpu_selector.cpp  fig_2_9_host_selector.cpp
samples/Ch03_data_management/: CMakeLists.txt  fig_3_13_read_after_write.cpp
samples/Ch04_expressing_parallelism/: fig_4_13_nd_range_matrix_multiply.cpp  fig_4_20_hierarchical_matrix_multiply.cpp  fig_4_22_hierarchical_logical_matrix_multiply.cpp  fig_4_7_basic_matrix_multiply.cpp
samples/Ch05_error_handling/: fig_5_3_async_error.cpp  fig_5_6_catch_snip.cpp  fig_5_7_catch.cpp  fig_5_8_lambda_handler.cpp  fig_5_9_default_handler_proxy.cpp
samples/Ch06_unified_shared_memory/: CMakeLists.txt  fig_6_6_usm_explicit_data_movement.cpp  fig_6_8_prefetch_memadvise.cpp
samples/Ch07_buffers/: fig_7_10_accessors.cpp
samples/Ch09_work_item_communication/: fig_9_11_sub_group_barrier.cpp  fig_9_13_matmul_broadcast.cpp  fig_9_14_ndrange_sub_group_matmul.cpp  fig_9_8_ndrange_tiled_matmul.cpp
samples/Ch10_expressing_kernels/: fig_10_3_optional_kernel_lambda_elements.cpp  fig_10_4_named_kernel_lambda.cpp  fig_10_8_opencl_object_interop.cpp  fig_10_9_kernel_lambda_build_options.cpp
samples/Ch11_vectors/: fig_11_6_load_store.cpp
samples/Ch12_device_information/: CMakeLists.txt  fig_12_1_assigned_device.cpp  fig_12_6_very_curious.cpp
samples/Ch13_practical_tips/: fig_13_4_stream.cpp
samples/Ch14_common_parallel_patterns/: CMakeLists.txt  fig_14_11_user_defined_reduction.cpp  fig_14_15_local_stencil.cpp  fig_14_16_basic_reduction.cpp  fig_14_17_nd_range_reduction.cpp  fig_14_18-20_inclusive_scan.cpp  fig_14_22_local_pack.cpp  fig_14_24_local_unpack.cpp  fig_14_8_one_reduction.cpp
samples/Ch15_gpus/: fig_15_10_divergent_control_flow.cpp
samples/Ch16_cpus/: fig_16_12_forward_dep.cpp  fig_16_6_stream_triad.cpp
samples/Ch17_fpgas/: fig_17_11_fpga_emulator_selector.cpp  fig_17_17_ndrange_func.cpp  fig_17_18_loop_func.cpp  fig_17_20_loop_carried_deps.cpp  fig_17_22_loop_carried_state.cpp  fig_17_31_inter_kernel_pipe.cpp  fig_17_9_fpga_selector.cpp
samples/Ch18_using_libs/: fig_18_11_std_fill.cpp  fig_18_13_binary_search.cpp  fig_18_15_pstl_usm.cpp  fig_18_1_builtin.cpp
samples/Ch19_memory_model_and_atomics/: CMakeLists.txt  fig_19_15_buffer_and_atomic_ref.cpp  fig_19_16_atomic_accessor.cpp  fig_19_17_usm_and_atomic_ref.cpp  fig_19_18_histogram.cpp  fig_19_19-20_device_latch.cpp  fig_19_6_avoid_data_race_with_barrier.cpp  fig_19_7_avoid_data_race_with_atomics.cpp
samples/Epilogue_future_direction/: fig_ep_2-4_generic_space.cpp  fig_ep_7_hierarchical_reduction.cpp
(+8070 files in other folders)
